2026-02-05T01:45:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21695536937 # 868
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-05
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 216 283 / 217 284
* notice: next accum: outdated-unq outdated-all / unq all: 216 283 / 218 285
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-04T01:44:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21655067316 # 867
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 215 282 / 217 284
* notice: next accum: outdated-unq outdated-all / unq all: 216 283 / 217 284
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15 2026-01-16] / []

2026-02-02T01:50:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21574588494 # 865
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-02
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 212 279 / 216 283
* notice: next accum: outdated-unq outdated-all / unq all: 215 282 / 217 284
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-04 2026-01-05 2026-01-06 2026-01-07 2026-01-08 2026-01-09 2026-01-10 2026-01-11 2026-01-12 2026-01-13 2026-01-14] / []

2026-02-01T01:57:57Z: